--- a/check_config/translations/en.yaml
+++ b/check_config/translations/en.yaml
@@ -1,4 +1,4 @@
 configuration:
   version:
     name: Version
-    description: The version of Home Assistant to check against, you can use `stable` , `latest`, `dev` and a version,
+    description: The version of Home Assistant to check against, you can use `stable` , `latest`, `dev` and a version
