Use YAML strip option where appropriate

--- a/check_config/translations/en.yaml
+++ b/check_config/translations/en.yaml
@@ -2,6 +2,6 @@
 configuration:
   version:
     name: Version
-    description: >
+    description: >-
       The version of Home Assistant to check against, you can use `stable`,
       `beta`, `dev` or a specific version
