--- a/rpc_shutdown/translations/en.yaml
+++ b/rpc_shutdown/translations/en.yaml
@@ -2,4 +2,5 @@
 configuration:
   computers:
     name: Computers
-    description: A list of computer objects to be able to shutdown from Home-Assistant.
+    description: >-
+      A list of computer objects to be able to shutdown from Home-Assistant.
