--- a/mosquitto/translations/en.yaml
+++ b/mosquitto/translations/en.yaml
@@ -27,7 +27,7 @@ configuration:
       `ssl` folder.
   customize:
     name: Customize
-    description: Customize options.
+    description: See the Documentation tab for more information about these options.
 network:
   1883/tcp: Normal MQTT
   1884/tcp: MQTT over WebSocket
