duckdns: Improve IPv6-support
* Use Hassio API to detect IPv6 addresses of the host, selectable by interface
* Separate IPv4 and IPv6 updates as DuckDNS skips IPv4 autodetection with IPv6 address present
* Fix misleading help text for IPv6 address autodetection (DuckDNS states it is not supported)

--- a/duckdns/translations/en.yaml
+++ b/duckdns/translations/en.yaml
@@ -25,12 +25,12 @@ configuration:
   ipv4:
     name: IPv4
     description: >-
-      By default, Duck DNS will auto detect your IPv4 address and use that. This
-      option allows you to override the auto-detection and specify an IPv4
-      address manually.
+      By default, DuckDNS will auto detect your IPv4 address and use that.
+      This option allows you to override the auto-detection and specify an
+      IPv4 address manually. The value 'none' disables IPv4 updates.
   ipv6:
     name: IPv6
     description: >-
-      By default, Duck DNS will auto detect your IPv6 address and use that. This
-      option allows you to override the auto-detection and specify an IPv6
-      address manually.
+      DuckDNS currently cannot auto-detect your IPv6 address. This option
+      allows to specify either 'default' or an interface name to use an IPv6
+      address of the host, alternatively you can input an address manually.
